@@ -66,3 +66,4 @@ type = markdown
 travis_status = 0
 
 [Author::Plicease::SpecialPrereqs]
+[Author::Plicease::NoUnsafeInc]
