@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Use [Author::Plicease::NoUnsafeInc]
 
 2.24      2017-11-07 08:09:45 -0500
   - Require plicease plugins 2.24
